welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:8: error: not found: value +
      case (10+d,d,_)|(10+d,_,d)=>5
              ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+d,d,_)|(10+d,_,d)=>5
               ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+d,d,_)|(10+d,_,d)=>5
                 ^blueTicket:8: error: d is already defined as value d
      case (10+d,d,_)|(10+d,_,d)=>5
                 ^blueTicket:8: error: not found: value +
      case (10+d,d,_)|(10+d,_,d)=>5
                         ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+d,d,_)|(10+d,_,d)=>5
                          ^blueTicket:8: error: d is already defined as value d
      case (10+d,d,_)|(10+d,_,d)=>5
                          ^blueTicket:8: error: illegal variable in pattern alternative
      case (10+d,d,_)|(10+d,_,d)=>5
                              ^blueTicket:8: error: d is already defined as value d
      case (10+d,d,_)|(10+d,_,d)=>5
                              ^